Add benchmark results from local benches.