@@ -22,21 +22,56 @@ CollisionCache<Key, Value> cache = CollisionCache
 * Compact [8-bit atomic logarithmic counters](src/main/java/com/fabahaba/collision/cache/LogCounterCache.java#L29) inspired by Salvatore Sanfilippo's [blog post on adding LFU caching to Redis](http://antirez.com/news/109), see the section on _Implementing LFU in 24 bits of space_.
 
 ####Benchmarks
-#####[Caffeine Get Put Benchmark](https://github.com/ben-manes/caffeine/wiki/Benchmarks)
+
+These benchmarks are intended to mimic those found in the [Caffeine Cache](https://github.com/ben-manes/caffeine/wiki/Benchmarks) project.
 
 ######Environment:
 * Intel® Xeon(R) CPU E5-2687W v3 @ 3.10GHz × 20 / 128GB Memory / Ubuntu 16.04
-* VM version: JDK 9-ea+134
-* VM options: -server -Xmx2G -XX:+UseG1GC -XX:-UseBiasedLocking
-* JMH 1.12
+* VM: JDK 9-ea+138 / options: -server
+
+#####[Loading Benchmark](src/jmh/java/com/fabahaba/collision/benchmarks/LoadingBenchmark.java)
+
+Tests the loading function against a [Zipf](https://en.wikipedia.org/wiki/Zipf%27s_law) distribution of keys.
 
 ```java
-CollisionCache.<V>withCapacity(maximumSize)
-    .setStrictCapacity(true)
+CollisionCache
+  .withCapacity(capacity, Long.class)
+  .setStrictCapacity(true)
+  .setLoader(
+    key -> {
+      amortizedSleep(); // Sleeps 1ms every (10.0 / 1000.0)% of calls.
+      return key;
+    }, (key, num) -> {
+      Math.pow(num, 3); // Something else to punish the miss.
+      return num;
+    })
+    .setStoreKeys(false) // Also ran with key storage (true).
     .buildSparse(3.0);
 ```
 
-![caffeine-get-put-benchmark.png](benchmark/caffeine-get-put-benchmark.png)
+> JMH 1.15, 20 threads
+
+![loading-cache-get-throughput](benchmark/loading-cache-get-throughput.png)
+
+#####[Get Put Benchmark](src/jmh/java/com/fabahaba/collision/benchmarks/GetPutBenchmark.java)
+
+Tests get and put operations against a cache pre-populated with a [Zipf](https://en.wikipedia.org/wiki/Zipf%27s_law) distribution.
+
+```java
+CollisionCache
+  .<V>withCapacity(capacity)
+  .setStrictCapacity(true)
+  .buildSparse(3.0);
+```
+
+> JMH 1.15, 16 threads
+
+![read-only-and-write-only-throughput](benchmark/read-only-and-write-only-throughput.png)
+
+> JMH 1.15, 12 read threads & 4 write threads
+
+![read-write-throughput](benchmark/read-write-throughput.png)
+
 
 ###Implementation Notes & Cache Types
 * Collision caches are backed by a large two dimensional array of generic values or java.until.Map.Entry's if storing keys.  Each hash bucket is fixed in length and should be kept small.
